removed pycharm flask debug patch file and made some minor changes

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -28,6 +28,8 @@
 
         <p>Selected Model: {{ selected_model }}</p>
 
+        <p>Note- On my PC config llama2 model was taking 10-15 mins for producing results, in some cases even 30 mins</p>
+
         <p>Chatbot Result: {{ result }}</p>
 
         <p>Top 3 Matching Chunks:</p>
