--- a/templates/data_ingest.html
+++ b/templates/data_ingest.html
@@ -17,7 +17,10 @@
         <p>Enter the pdf/docx file path without quotes("C:\Users\Desktop\xyz.pdf", C:\Users\Desktop\xyz.pdf)</p>
         <label for="file_path">File Path:</label>
         <input type="text" name="file_path">
-
+        <br>
+        <br>
+        <p>After entering the path press "Ingest Data" button and wait till the data is inserted, it will then redirect to Chatbot page </p>
+        <br>
         <button type="submit">Ingest Data</button>
         <a href="{{ url_for('chatbot_route') }}"><button type="button">Query</button></a>
 
